Odkazy na převod jednotek

--- a/src/kompoty.html
+++ b/src/kompoty.html
@@ -2,11 +2,11 @@
 
 <a id="kompot-z-cerstvych-visni"><h2>Kompot z&nbsp;čerstvých višní</h2></a>
 
-<p>Nech na rendlíku v&nbsp;půl žejdlíku vody vařit čtvrt libry cukru s&nbsp;kouskem skořice, pak do toho vlož asi dva-žejdlíky omytých višni a&nbsp;nech je přikryté zvolna trochu povařit, potom je vyndej na misku, šťávu nech ještě povařit a&nbsp;pak ji vlej na višně. – Třešňový* kompot připravuje se na týž způsob, jen že se dá o&nbsp;polovic méně cukru.</p>
+<p>Nech na rendlíku v&nbsp;půl žejdlíku vody vařit čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;kouskem skořice, pak do toho vlož asi dva-žejdlíky omytých višni a&nbsp;nech je přikryté zvolna trochu povařit, potom je vyndej na misku, šťávu nech ještě povařit a&nbsp;pak ji vlej na višně. – Třešňový* kompot připravuje se na týž způsob, jen že se dá o&nbsp;polovic méně cukru.</p>
 
 <a id="kompot-z-jahod"><h2>Kompot z&nbsp;jahod</h2></a>
 
-<p>Nech na rendlíku ve čtvrt žejdlíku vína zvařit šest lotů cukru, a&nbsp;když to počíná houstnou dej do toho žejdlík přebraných pěkných lesních jahod, zatřes jimi zlehka, aby se všechny potopily, nech jen var přes ně přejít a&nbsp;vyklop je na misku.</p>
+<p>Nech na rendlíku ve čtvrt žejdlíku vína zvařit šest <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru, a&nbsp;když to počíná houstnou dej do toho žejdlík přebraných pěkných lesních jahod, zatřes jimi zlehka, aby se všechny potopily, nech jen var přes ně přejít a&nbsp;vyklop je na misku.</p>
 
 <a id="kompot-z-malin"><h2>Kompot z&nbsp;malin</h2></a>
 
@@ -14,19 +14,19 @@
 
 <a id="kompot-z-angrestu"><h2>Kompot z&nbsp;angreštu</h2></a>
 
-<p>Ober čistě asi žejdlík ještě hodně tvrdého angreštu a&nbsp;dej ho do studené vody; nech na rendlíčku zvařit asi šest lotů cukru s&nbsp;trochou vody, načež angrešt cedníkem z&nbsp;vody. vyber, dej ho do cukru,. potřásej ním a&nbsp;nech ho asi dvě nebo tři minuty vařit, pak ho vyndej na kompotní misku a&nbsp;dej ho na stůl ke studené pečeni; je-li málo sladký, posyp ho ještě trochu cukrem.</p>
+<p>Ober čistě asi žejdlík ještě hodně tvrdého angreštu a&nbsp;dej ho do studené vody; nech na rendlíčku zvařit asi šest <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru s&nbsp;trochou vody, načež angrešt cedníkem z&nbsp;vody. vyber, dej ho do cukru,. potřásej ním a&nbsp;nech ho asi dvě nebo tři minuty vařit, pak ho vyndej na kompotní misku a&nbsp;dej ho na stůl ke studené pečeni; je-li málo sladký, posyp ho ještě trochu cukrem.</p>
 
 <a id="kompot-z-merunek"><h2>Kompot z&nbsp;meruněk</h2></a>
 
-<p>Oloupej dvanáct zralých sice, ale ještě tvrdých meruněk, rozpůli je, pecky vyndej, meruňky polož jednu vedle druhé do čistého kuthánku, přidej k&nbsp;nim čtvrt libry tlučeného cukru, koflíček vody, přikrej je a&nbsp;nech je zlehounka dusit, až změknou; potom je vyndej na misku, do šťávy přidej z&nbsp;roztlučených pecek vyndané a&nbsp;v&nbsp;moždíři utlučené jádra, nech to ještě zvařit a&nbsp;pak meruňky tím polej. Jádrami nabydou meruňky zvláštní chuti.</p>
+<p>Oloupej dvanáct zralých sice, ale ještě tvrdých meruněk, rozpůli je, pecky vyndej, meruňky polož jednu vedle druhé do čistého kuthánku, přidej k&nbsp;nim čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného cukru, koflíček vody, přikrej je a&nbsp;nech je zlehounka dusit, až změknou; potom je vyndej na misku, do šťávy přidej z&nbsp;roztlučených pecek vyndané a&nbsp;v&nbsp;moždíři utlučené jádra, nech to ještě zvařit a&nbsp;pak meruňky tím polej. Jádrami nabydou meruňky zvláštní chuti.</p>
 
 <a id="kompot-z-broskvi"><h2>Kompot z&nbsp;broskvi</h2></a>
 
-<p>Deset ne příliš měkkých broskví vlož na minutu do horké vody, pak je oloupej, rozkroj na půlky a&nbsp;vlož je do čistého rendlíku, v&nbsp;němž jsi byla čtvrt libry cukru s&nbsp;půl žejdlíkem vina rozpustit nechala, přidej k&nbsp;nim na nudličky nakrájenou citronovou kůru a&nbsp;nech je přikryté zpovolna dusit; když jsou dost měkké, vyndej je opatrně na kompotní misku a&nbsp;polej je šťávou, do které, je-li příliš hustá, můžeš přilejt trochu vody.</p>
+<p>Deset ne příliš měkkých broskví vlož na minutu do horké vody, pak je oloupej, rozkroj na půlky a&nbsp;vlož je do čistého rendlíku, v&nbsp;němž jsi byla čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vina rozpustit nechala, přidej k&nbsp;nim na nudličky nakrájenou citronovou kůru a&nbsp;nech je přikryté zpovolna dusit; když jsou dost měkké, vyndej je opatrně na kompotní misku a&nbsp;polej je šťávou, do které, je-li příliš hustá, můžeš přilejt trochu vody.</p>
 
 <a id="kompot-z-mirabelek"><h2>Kompot z&nbsp;mirabelek</h2></a>
 
-<p>Nech zvařit šest lotů cukru se čtvrt žejdlíkem vody, vlož do toho očištěné, ne přezralé mirabelky a&nbsp;nech je chvilku zpovolna vařit, pak je vyndej na misku, šťávu nech ještě povařit a&nbsp;vlej ji na ně.</p>
+<p>Nech zvařit šest <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru se čtvrt <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vody, vlož do toho očištěné, ne přezralé mirabelky a&nbsp;nech je chvilku zpovolna vařit, pak je vyndej na misku, šťávu nech ještě povařit a&nbsp;vlej ji na ně.</p>
 
 <a id="kompot-z-misenskych-jablek"><h2>Kompot z&nbsp;míšeňských jablek</h2></a>
 
@@ -42,11 +42,11 @@
 
 <a id="kompot-z-hrusek"><h2>Kompot z&nbsp;hrušek</h2></a>
 
-<p>Oloupej pěkně 9 nebo 10 hrušek a&nbsp;vlož je do studené vody, aby nezčervenaly; dej asi do dvou žejdlíků vody čtvrt libry cukru, kus celé skořice, kůru s&nbsp;jednoho citronu, a&nbsp;když se to začne vařit, vlož hrušky do toho, přikrej je a&nbsp;nech je vařit, až jsou měkke; potom hrušky vyndej, omáčku nech ještě chvíli vařit, pak ji proceď na hrušky, nech to vystydnout a&nbsp;dej to na stůl. Nebo rozkrájej hrušky na půlky a&nbsp;nech je jako prvé vařit, pak je vyndej, do omáčky dej ještě čtvrt libry cukru a&nbsp;nech to tak dlouho vařit, až se cukr táhne; potom hrušky do melounové formy pěkně vyrovnej, omáčku na ně proceď a&nbsp;nech to stydnout; pak to vyklop, okrášli kolem nějakým listím a&nbsp;nes to na stůl.</p>
+<p>Oloupej pěkně 9 nebo 10 hrušek a&nbsp;vlož je do studené vody, aby nezčervenaly; dej asi do dvou <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíků</a> vody čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru, kus celé skořice, kůru s&nbsp;jednoho citronu, a&nbsp;když se to začne vařit, vlož hrušky do toho, přikrej je a&nbsp;nech je vařit, až jsou měkke; potom hrušky vyndej, omáčku nech ještě chvíli vařit, pak ji proceď na hrušky, nech to vystydnout a&nbsp;dej to na stůl. Nebo rozkrájej hrušky na půlky a&nbsp;nech je jako prvé vařit, pak je vyndej, do omáčky dej ještě čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru a&nbsp;nech to tak dlouho vařit, až se cukr táhne; potom hrušky do melounové formy pěkně vyrovnej, omáčku na ně proceď a&nbsp;nech to stydnout; pak to vyklop, okrášli kolem nějakým listím a&nbsp;nes to na stůl.</p>
 
 <a id="kompot-z-cerstvych-svestek"><h2>Kompot z&nbsp;čerstvých švestek</h2></a>
 
-<p>Nech na rendlíku rozpustit šest lotů cukru v&nbsp;půl žejdlíku červeného vína, vlož do toho asi třicet pěkných švestek, přidej trochu skořice a&nbsp;nech je přikryté zpovolna dusit, dej však pozor, aby zůstaly celé; pak je vyndej, polej šťávou a&nbsp;nech vystydnout.</p>
+<p>Nech na rendlíku rozpustit šest <a href="miry-a-vahy.html#lot" class="mav">lotů</a> cukru v&nbsp;půl žejdlíku červeného vína, vlož do toho asi třicet pěkných švestek, přidej trochu skořice a&nbsp;nech je přikryté zpovolna dusit, dej však pozor, aby zůstaly celé; pak je vyndej, polej šťávou a&nbsp;nech vystydnout.</p>
 
 <a id="jiny-kompot-z-cerstvych-svestek"><h2>Jiný kompot z&nbsp;čerstvých švestek</h2></a>
 
@@ -62,25 +62,25 @@
 
 <a id="kompot-z-mrkve"><h2>Kompot z&nbsp;mrkve</h2></a>
 
-<p>Oškrab čistě několik šťavnatých mrkví, rozkrájej je na tenounké nudličky, dej je na rendlík se čtvrt librou cukru, na němžto jsi byla ostrouhala kůru s&nbsp;jednoho pomeranče, přilej k&nbsp;tomu asi půl žejdlíka vody, naceď do toho šťávu z&nbsp;toho pomeranče, přikrej to a&nbsp;nech to do měkka dusit, musíš však bedlivě dohlížet, aby se to nepřipálilo; pak to nech vychladnout a&nbsp;dej to na stůl buď co samostatný kompot, anebo z&nbsp;toho udělej věnec buď okolo brusinek, neb okolo suchých vařených švestek aneb okolo jiného zavařeného ovoce.</p>
+<p>Oškrab čistě několik šťavnatých mrkví, rozkrájej je na tenounké nudličky, dej je na rendlík se čtvrt librou cukru, na němžto jsi byla ostrouhala kůru s&nbsp;jednoho pomeranče, přilej k&nbsp;tomu asi půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> vody, naceď do toho šťávu z&nbsp;toho pomeranče, přikrej to a&nbsp;nech to do měkka dusit, musíš však bedlivě dohlížet, aby se to nepřipálilo; pak to nech vychladnout a&nbsp;dej to na stůl buď co samostatný kompot, anebo z&nbsp;toho udělej věnec buď okolo brusinek, neb okolo suchých vařených švestek aneb okolo jiného zavařeného ovoce.</p>
 
 <a id="kompot-z-mrkve-a-pomerancu"><h2>Kompot z&nbsp;mrkve a&nbsp;pomerančů</h2></a>
 
-<p>Oškrab dvě pěkné velké tmavočervené a&nbsp;dvě bledožluté mrkve, rozkrájej každou zvlášť na tenounké nudličky, přemej je, vlož každou na jiný rendlíček, k&nbsp;červené přidej na nudličky skrájenou kůru s&nbsp;jednoho pomeranče, čtyry loty cukru a&nbsp;půl žejdlíka červeného vína, ke žluté dej nakrájenou kůru s&nbsp;jednoho citronu, půl žejdlíka bílého vína, trochu vody, a&nbsp;nech obojí do měkka dusit; pak vytlač do každé šťávu z&nbsp;půl citronu, a&nbsp;není-li to dost sladké, přidej cukru. Nyní rozkrájej dva pomeranče na půlměsíčky, tu bledou mrkev urovnej do prostřed kompotní misky, kolem ní udělej věnec z&nbsp;té hnědé mrkve, oblož to těmi pomerančovými půlměsíčky, posyp to ještě cukrem a&nbsp;nech to vystydnout chceš-li, můžeš to ještě okrášlit nějakou zavařeninkou.</p>
+<p>Oškrab dvě pěkné velké tmavočervené a&nbsp;dvě bledožluté mrkve, rozkrájej každou zvlášť na tenounké nudličky, přemej je, vlož každou na jiný rendlíček, k&nbsp;červené přidej na nudličky skrájenou kůru s&nbsp;jednoho pomeranče, čtyry <a href="miry-a-vahy.html#lot" class="mav">loty</a> cukru a&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> červeného vína, ke žluté dej nakrájenou kůru s&nbsp;jednoho citronu, půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> bílého vína, trochu vody, a&nbsp;nech obojí do měkka dusit; pak vytlač do každé šťávu z&nbsp;půl citronu, a&nbsp;není-li to dost sladké, přidej cukru. Nyní rozkrájej dva pomeranče na půlměsíčky, tu bledou mrkev urovnej do prostřed kompotní misky, kolem ní udělej věnec z&nbsp;té hnědé mrkve, oblož to těmi pomerančovými půlměsíčky, posyp to ještě cukrem a&nbsp;nech to vystydnout chceš-li, můžeš to ještě okrášlit nějakou zavařeninkou.</p>
 
 <a id="kompot-z-melounu"><h2>Kompot z&nbsp;melounu</h2></a>
 
-<p>Rozpůli meloun, vyndej z&nbsp;něho všechny jádra, rozkrájej ho na stejné kousky, oloupej je a&nbsp;vlož je na misku. Nech na rendlíčku zvařit čtvrt libry cukru s&nbsp;půl žejdlíkem vody a&nbsp;šťávou z&nbsp;jednoho citronu, a&nbsp;když se to začíná táhnout, polej tím ten rozkrájený meloun a&nbsp;nech ho tak asi hodinu stát; pak šťávu slej, nech ji opět zvařit, meloun urovnej na kompotní misku, k&nbsp;té zvařenině přidej lžičku rumu a&nbsp;meloun tím polej. Máš-li zavařený rybíz, můžeš to ním povrchu okrášlit.</p>
+<p>Rozpůli meloun, vyndej z&nbsp;něho všechny jádra, rozkrájej ho na stejné kousky, oloupej je a&nbsp;vlož je na misku. Nech na rendlíčku zvařit čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vody a&nbsp;šťávou z&nbsp;jednoho citronu, a&nbsp;když se to začíná táhnout, polej tím ten rozkrájený meloun a&nbsp;nech ho tak asi hodinu stát; pak šťávu slej, nech ji opět zvařit, meloun urovnej na kompotní misku, k&nbsp;té zvařenině přidej lžičku rumu a&nbsp;meloun tím polej. Máš-li zavařený rybíz, můžeš to ním povrchu okrášlit.</p>
 
 <a id="kompot-ze-gdoulovych-jablek"><h2>Kompot ze gdoulových jablek</h2></a>
 
-<p>Oloupej 8 nebo 10 gdoulových jablek, rozkrájej je na čtvrtky, jaderníky vyřízni a&nbsp;jablka nech ve vodě uvařit na měkko sice, ne však aby se rozpadly; mezitím nech na rendlíčku čtvrt libry cukru s&nbsp;půl žejdlíkem vody, kouskem skořice a&nbsp;nakrájenou citronovou kůrou do husta zvařit, potom jablka opatrně vyndej, vlož je do té zvařeniny a&nbsp;nech je ještě chvilku povařit, pak je vyndej na kompotní misku a&nbsp;tou šťávou je polej.</p>
+<p>Oloupej 8 nebo 10 gdoulových jablek, rozkrájej je na čtvrtky, jaderníky vyřízni a&nbsp;jablka nech ve vodě uvařit na měkko sice, ne však aby se rozpadly; mezitím nech na rendlíčku čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vody, kouskem skořice a&nbsp;nakrájenou citronovou kůrou do husta zvařit, potom jablka opatrně vyndej, vlož je do té zvařeniny a&nbsp;nech je ještě chvilku povařit, pak je vyndej na kompotní misku a&nbsp;tou šťávou je polej.</p>
 
 <a id="kompot-kastanovy"><h2>Kompot kaštanový</h2></a>
 
-<p>S libry kaštanů oloupej tu svrchní tvrdou slupku, pak na ně nalej vařící vodu a&nbsp;nech je v&nbsp;ní tak dlouho, až můžeš i&nbsp;tu druhou slupku sloupnout; to když se stalo, vlož kaštany do rendlíku, v&nbsp;němž jsi byla nechala zvařit čtvrt libry cukru s&nbsp;půl žejdlíkem vody, a&nbsp;nech je zvolna do měkka dusit; pak urovnej kaštany na misku, do cukru proced šťávu z&nbsp;jednoho pomeranče, nech přes to ještě var přejít a&nbsp;kaštany tím polej.</p>
+<p>S <a href="miry-a-vahy.html#libra" class="mav">libry</a> kaštanů oloupej tu svrchní tvrdou slupku, pak na ně nalej vařící vodu a&nbsp;nech je v&nbsp;ní tak dlouho, až můžeš i&nbsp;tu druhou slupku sloupnout; to když se stalo, vlož kaštany do rendlíku, v&nbsp;němž jsi byla nechala zvařit čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> cukru s&nbsp;půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíkem</a> vody, a&nbsp;nech je zvolna do měkka dusit; pak urovnej kaštany na misku, do cukru proced šťávu z&nbsp;jednoho pomeranče, nech přes to ještě var přejít a&nbsp;kaštany tím polej.</p>
 
 <a id="kompot-z-brusinek"><h2>Kompot z&nbsp;brusinek</h2></a>
 
-<p>Nech na rendlíčku zvařit půl žejdlíka červeného vína se Čtvrt librou cukru, přidej k&nbsp;tomu kousek skořice a&nbsp;trochu citronové kůry, a&nbsp;když to začíná houstnout, dej do toho asi žejdlík zavařených brusinek, nech je jenom zpejchnout a&nbsp;vyndej je na misku; pak rozkrájej jeden nebo dva pomeranče na půlměsíčky, oblož nimi brusinky, posyp to ještě cukrem a&nbsp;dej to na stůl.</p>
+<p>Nech na rendlíčku zvařit půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> červeného vína se Čtvrt librou cukru, přidej k&nbsp;tomu kousek skořice a&nbsp;trochu citronové kůry, a&nbsp;když to začíná houstnout, dej do toho asi žejdlík zavařených brusinek, nech je jenom zpejchnout a&nbsp;vyndej je na misku; pak rozkrájej jeden nebo dva pomeranče na půlměsíčky, oblož nimi brusinky, posyp to ještě cukrem a&nbsp;dej to na stůl.</p>
 
