--- a/src/ledy-rozlicnych-barev.html
+++ b/src/ledy-rozlicnych-barev.html
@@ -4,7 +4,7 @@
 
 <a id="bily-led"><h2>Bílý led</h2></a>
 
-<p>Utluč čtvrt libry pěkného cukru na mouku a&nbsp;prosej ho (tak se to musi stát ua každý led), pak ho dej na šáleček, přidej k&nbsp;němu z&nbsp;jednoho bílku sněhu, a&nbsp;hodně to tři, potom do toho naceď z&nbsp;půl citronu šťávu, tak led pěkně zbělí; musí se ale nejméně půl hodiny míchat.</p>
+<p>Utluč čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> pěkného cukru na mouku a&nbsp;prosej ho (tak se to musi stát ua každý led), pak ho dej na šáleček, přidej k&nbsp;němu z&nbsp;jednoho bílku sněhu, a&nbsp;hodně to tři, potom do toho naceď z&nbsp;půl citronu šťávu, tak led pěkně zbělí; musí se ale nejméně půl hodiny míchat.</p>
 
 <a id="zluty-led"><h2>Žlutý led</h2></a>
 
@@ -16,17 +16,17 @@
 
 <a id="skoricovy-led"><h2>Skořicový led</h2></a>
 
-<p>Vezme se 4 loty tlučeného cukru, lot tlučené pro-sáté skořice a&nbsp;bílkový sníh, míchá se to půl hodinky, nebo lépe až se dělají puchýře – a&nbsp;led jest hotov.</p>
+<p>Vezme se 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> tlučeného cukru, <a href="miry-a-vahy.html#lot" class="mav">lot</a> tlučené pro-sáté skořice a&nbsp;bílkový sníh, míchá se to půl hodinky, nebo lépe až se dělají puchýře – a&nbsp;led jest hotov.</p>
 
 <a id="jahodovy-led"><h2>Jahodový led</h2></a>
 
-<p>Vezmi čtvrt libry tlučeného prosátého cukru, z&nbsp;jednoho bílku sníh a&nbsp;jahodové, višňové nebo rybízové šťávy, a&nbsp;míchej to asi čtvrt hodiny.</p>
+<p>Vezmi čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlučeného prosátého cukru, z&nbsp;jednoho bílku sníh a&nbsp;jahodové, višňové nebo rybízové šťávy, a&nbsp;míchej to asi čtvrt hodiny.</p>
 
 <p>Malinový led připravuje se na tentýž způsob.</p>
 
 <a id="ruzovy-led"><h2>Růžový led</h2></a>
 
-<p>Smíchej čtvrt libry tlačeného prosátého cukru s&nbsp;bílkovým sněhem, pak rozmoč několik chmírek šafránu v&nbsp;alkermesové šťávě <i>(Alkermessaft)</i>, dej ho do toho – tak je to růžové.</p>
+<p>Smíchej čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> tlačeného prosátého cukru s&nbsp;bílkovým sněhem, pak rozmoč několik chmírek šafránu v&nbsp;alkermesové šťávě <i>(Alkermessaft)</i>, dej ho do toho – tak je to růžové.</p>
 
 <p>Všech těchto ledů může se upotřebit k&nbsp;okrašlování dortů a&nbsp;k&nbsp;dělání oplatkových obloučků. Zvláště žlutý a&nbsp;bílý led jest výborný, když se na oplatek namaže a&nbsp;jako oblouček sušit nechá.</p>
 
@@ -62,4 +62,4 @@
 
 <a id="jak-se-cukrova-krupice-pripravuje-a-barvi"><h2>Jak se cukrová krupice připravuje a&nbsp;barví</h2></a>
 
-<p>Vezmi libru pěkného bílého suchého cukru, nejlépe od špičky, a&nbsp;nejdříve ho rozsekej na malé kouštinky, jak se obyčejně ku kávě sekává, pak ho kladívkem lehounce na drobno utluč; musíš s&nbsp;ním ale šetrně zacházet, aby neztratil lesk; pak ho prosej na papír skrze plechový cedník s&nbsp;hezky velkými dírkami. Co nepropadne, opět na předešlý způsob utluč, a&nbsp;tak pokračuj, až jest cukr všechen prosátý. Potom vezmi jiný cedník s&nbsp;menšími dírkami a&nbsp;prosej cukr zase na jiný papír. Co nyní v&nbsp;cedníku zůstane, podobá se trhaným krupkám, a&nbsp;je to tak nazvaný hrubý cukr, který se jak bílý tak i&nbsp;rozličné barvený k&nbsp;všeliké potřebě hodí. Ostatní opět prosej skrze husté sejtko, a&nbsp;tím zůstane v&nbsp;sejtku trochu drobnější, krupici se podobající cukr, a&nbsp;co propadne, jest cukrová mouka, která se hodí k&nbsp;dortům, ledům, španělským větrům a&nbsp;všem takovým věcem, ku kterým jest prosátého cukru nevyhnutelně zapotřebí. Jest tedy radno, aby takového cukru vždy něco, aspoň půl libry v&nbsp;zásobě bylo; když se něco nenadále nahodí, není potřebí se zdržovati. – Tento hrubý cukr jest k&nbsp;posypání rozličných pamlsků, nákypů atd. mnohem ouhlednější než drobně utlučený, a&nbsp;hodí se též k&nbsp;okrášlení dortů. Taktéž na ledy je tento cukr příhodný, a&nbsp;sice na čokoládový led bílý a&nbsp;na bílý led červený, který se takto barví: Na čistý bílý talíř dej částku těchto cukrových krupek nebo hrubého cukru, kápni naň několik kapek alkermesové šťávy, a&nbsp;spěšně ním míchej, aby se krupičky nerozpustily a&nbsp;přece aby byly navlaženy, pak to nech na vlažném, ne však na horkém místě uschnout; potom se cukr opět několika kapkami alkermesové šťávy pokropí, promíchá a&nbsp;nechá se sušit, a&nbsp;tak se pokračuje tak dlouho, až je cukr dost červený. Modře barví se na tentýž způsob šťávou fialkovou, žlutě pak v&nbsp;několika kapkách říčné vody rozmočeným a&nbsp;procezeným šafránem.</p>
+<p>Vezmi <a href="miry-a-vahy.html#libra" class="mav">libru</a> pěkného bílého suchého cukru, nejlépe od špičky, a&nbsp;nejdříve ho rozsekej na malé kouštinky, jak se obyčejně ku kávě sekává, pak ho kladívkem lehounce na drobno utluč; musíš s&nbsp;ním ale šetrně zacházet, aby neztratil lesk; pak ho prosej na papír skrze plechový cedník s&nbsp;hezky velkými dírkami. Co nepropadne, opět na předešlý způsob utluč, a&nbsp;tak pokračuj, až jest cukr všechen prosátý. Potom vezmi jiný cedník s&nbsp;menšími dírkami a&nbsp;prosej cukr zase na jiný papír. Co nyní v&nbsp;cedníku zůstane, podobá se trhaným krupkám, a&nbsp;je to tak nazvaný hrubý cukr, který se jak bílý tak i&nbsp;rozličné barvený k&nbsp;všeliké potřebě hodí. Ostatní opět prosej skrze husté sejtko, a&nbsp;tím zůstane v&nbsp;sejtku trochu drobnější, krupici se podobající cukr, a&nbsp;co propadne, jest cukrová mouka, která se hodí k&nbsp;dortům, ledům, španělským větrům a&nbsp;všem takovým věcem, ku kterým jest prosátého cukru nevyhnutelně zapotřebí. Jest tedy radno, aby takového cukru vždy něco, aspoň půl <a href="miry-a-vahy.html#libra" class="mav">libry</a> v&nbsp;zásobě bylo; když se něco nenadále nahodí, není potřebí se zdržovati. – Tento hrubý cukr jest k&nbsp;posypání rozličných pamlsků, nákypů atd. mnohem ouhlednější než drobně utlučený, a&nbsp;hodí se též k&nbsp;okrášlení dortů. Taktéž na ledy je tento cukr příhodný, a&nbsp;sice na čokoládový led bílý a&nbsp;na bílý led červený, který se takto barví: Na čistý bílý talíř dej částku těchto cukrových krupek nebo hrubého cukru, kápni naň několik kapek alkermesové šťávy, a&nbsp;spěšně ním míchej, aby se krupičky nerozpustily a&nbsp;přece aby byly navlaženy, pak to nech na vlažném, ne však na horkém místě uschnout; potom se cukr opět několika kapkami alkermesové šťávy pokropí, promíchá a&nbsp;nechá se sušit, a&nbsp;tak se pokračuje tak dlouho, až je cukr dost červený. Modře barví se na tentýž způsob šťávou fialkovou, žlutě pak v&nbsp;několika kapkách říčné vody rozmočeným a&nbsp;procezeným šafránem.</p>
