--- a/src/nadivky-do-kolacu-buchticek-a-koblih.html
+++ b/src/nadivky-do-kolacu-buchticek-a-koblih.html
@@ -10,19 +10,19 @@
 
 <a id="tvaroh"><h2>Tvaroh</h2></a>
 
-<p>Vezme se dobrý tvaroh, dá se na mísu a&nbsp;dobře se rozetře, pak se do něho vrazi žloutků a&nbsp;celých vajec tolik, aby byl právě tak řídký, jak jej kuchařka potřebuje (ku př. na libru tvarohu mohou se počítat 3 žloutky a&nbsp;3 celé vejce), potom se do něho dá trochu květu a&nbsp;osladí se dle libosti. Má-li se tohoto tvarohu použit na německé koláče, tedy se nechá jen tak; na skládané koláče ale mohou se do něho dát dobře přebrané a&nbsp;přemyté malé hrozinky.</p>
+<p>Vezme se dobrý tvaroh, dá se na mísu a&nbsp;dobře se rozetře, pak se do něho vrazi žloutků a&nbsp;celých vajec tolik, aby byl právě tak řídký, jak jej kuchařka potřebuje (ku př. na <a href="miry-a-vahy.html#libra" class="mav">libru</a> tvarohu mohou se počítat 3 žloutky a&nbsp;3 celé vejce), potom se do něho dá trochu květu a&nbsp;osladí se dle libosti. Má-li se tohoto tvarohu použit na německé koláče, tedy se nechá jen tak; na skládané koláče ale mohou se do něho dát dobře přebrané a&nbsp;přemyté malé hrozinky.</p>
 
 <a id="hrozinkova-povidla"><h2>Hrozinková povidla</h2></a>
 
-<p>Omej ve studené vodě čtvrt libry pěkných velkých hrozinek a&nbsp;čistě je otři, pak z&nbsp;nich vyber všecky pecičky a&nbsp;drobně je rozkrájej, dej je na rendlíček, k&nbsp;nim s&nbsp;půl citronu drobně rozkrájenou kůru, nalej na ně několik lžiček rakouského vína a&nbsp;přidej cukru, aby nabyly líbezné chuti, dej k&nbsp;nim též trochu skořice a&nbsp;trochu hřebíčku, nech je trochu povařit a&nbsp;pak vychladnout. Těchto povidel může se v&nbsp;čas nouze použit místo zavařeného rybízu.</p>
+<p>Omej ve studené vodě čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> pěkných velkých hrozinek a&nbsp;čistě je otři, pak z&nbsp;nich vyber všecky pecičky a&nbsp;drobně je rozkrájej, dej je na rendlíček, k&nbsp;nim s&nbsp;půl citronu drobně rozkrájenou kůru, nalej na ně několik lžiček rakouského vína a&nbsp;přidej cukru, aby nabyly líbezné chuti, dej k&nbsp;nim též trochu skořice a&nbsp;trochu hřebíčku, nech je trochu povařit a&nbsp;pak vychladnout. Těchto povidel může se v&nbsp;čas nouze použit místo zavařeného rybízu.</p>
 
 <a id="cukrova-jiska"><h2>Cukrová jíška</h2></a>
 
-<p>Dej na rendlíček 4 loty pěkné mouky s&nbsp;malinkým kouskem másla, a&nbsp;nech ji do požloutla upražit, pak do ní přisyp 4 loty tlučeného cukru. Touto jíškou můžeš místo sekaných mandlí posypat malé koláčky.</p>
+<p>Dej na rendlíček 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> pěkné mouky s&nbsp;malinkým kouskem másla, a&nbsp;nech ji do požloutla upražit, pak do ní přisyp 4 <a href="miry-a-vahy.html#lot" class="mav">loty</a> tlučeného cukru. Touto jíškou můžeš místo sekaných mandlí posypat malé koláčky.</p>
 
 <a id="jicha-k-posypani-kolacu"><h2>Jícha k&nbsp;posypání koláčů</h2></a>
 
-<p>Rozdrob na vále šest lotů čerstvého másla ve čtvrt libře mouky a&nbsp;ve čtyřech lotech tlučeného cukru, hodně to promíchej a&nbsp;posyp tím velké koláče ku kávě.</p>
+<p>Rozdrob na vále šest <a href="miry-a-vahy.html#lot" class="mav">lotů</a> čerstvého másla ve čtvrt libře mouky a&nbsp;ve čtyřech lotech tlučeného cukru, hodně to promíchej a&nbsp;posyp tím velké koláče ku kávě.</p>
 
 <a id="pernik"><h2>Perník</h2></a>
 
