--- a/src/salaty.html
+++ b/src/salaty.html
@@ -14,7 +14,7 @@
 
 <a id="hlavkovy-salat-se-slaninou"><h2>Hlávkový salát se slaninou</h2></a>
 
-<p>Čtvrt libry slaniny rozkrájej na drobné kostky a&nbsp;nech ji na rendlíku do žluta usmažit; potom k&nbsp;ni přilej půl žejdlíka dobrého vinního vlažného octa, osol to a&nbsp;nech to zvařit. Zatím si připrav na misku dobře obraný, vypraný a&nbsp;na čtvrtky rozkrájený hlávkový salát, pak ho tím zvařeným octem polej, promíchej, na misce urovnej a&nbsp;nes ho hned na stůl.</p>
+<p>Čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> slaniny rozkrájej na drobné kostky a&nbsp;nech ji na rendlíku do žluta usmažit; potom k&nbsp;ni přilej půl <a href="miry-a-vahy.html#zejdlik" class="mav">žejdlíka</a> dobrého vinního vlažného octa, osol to a&nbsp;nech to zvařit. Zatím si připrav na misku dobře obraný, vypraný a&nbsp;na čtvrtky rozkrájený hlávkový salát, pak ho tím zvařeným octem polej, promíchej, na misce urovnej a&nbsp;nes ho hned na stůl.</p>
 
 <a id="salat-okurkovy"><h2>Salát okurkový</h2></a>
 
@@ -78,4 +78,4 @@
 
 <a id="salat-ze-syroveho-masa"><h2>Salát ze syrového masa</h2></a>
 
-<p>Seškrab ostrou plechovou lžicí libru hovězího masa z&nbsp;kejty na kasičku, pak udělej z&nbsp;toho na talíř čtyry hromádky, posyp je solí, pepřem a&nbsp;velmi drobounce nasekanou cibulí, polej to octem a&nbsp;olejem, a&nbsp;nech to nejméně půl hodiny stát, aby se chuť z&nbsp;přísad do masa vtáhla. Můžeš k&nbsp;tomu také připojit sardele, kaprle a&nbsp;na tvrdo vařené skrájené vejce.</p>
+<p>Seškrab ostrou plechovou lžicí <a href="miry-a-vahy.html#libra" class="mav">libru</a> hovězího masa z&nbsp;kejty na kasičku, pak udělej z&nbsp;toho na talíř čtyry hromádky, posyp je solí, pepřem a&nbsp;velmi drobounce nasekanou cibulí, polej to octem a&nbsp;olejem, a&nbsp;nech to nejméně půl hodiny stát, aby se chuť z&nbsp;přísad do masa vtáhla. Můžeš k&nbsp;tomu také připojit sardele, kaprle a&nbsp;na tvrdo vařené skrájené vejce.</p>
