--- a/src/rozlicna-masla.html
+++ b/src/rozlicna-masla.html
@@ -6,11 +6,11 @@
 
 <a id="maslo-zlate"><h2>Máslo zlaté</h2></a>
 
-<p>Nech ve smetaně rozpustit trochu šafránu a&nbsp;proceď to; potom utři čtvrt libry čerstvě tlučeného másla asi se čtyřmi tvrdými, hezky žlutými žloutky, a&nbsp;přimíchej k&nbsp;tomu té šafránové smetany; aby se máslo stalo ještě líbeznějším, můžeš k&nbsp;němu přimíchat s&nbsp;půl citronu šťávy, načež ho dej do studeného místa. – Toto máslo se hodí k&nbsp;okrašlování mis se studenými jídly, jako šunek, uzených jazyků a&nbsp;masitých rosolů.</p>
+<p>Nech ve smetaně rozpustit trochu šafránu a&nbsp;proceď to; potom utři čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> čerstvě tlučeného másla asi se čtyřmi tvrdými, hezky žlutými žloutky, a&nbsp;přimíchej k&nbsp;tomu té šafránové smetany; aby se máslo stalo ještě líbeznějším, můžeš k&nbsp;němu přimíchat s&nbsp;půl citronu šťávy, načež ho dej do studeného místa. – Toto máslo se hodí k&nbsp;okrašlování mis se studenými jídly, jako šunek, uzených jazyků a&nbsp;masitých rosolů.</p>
 
 <a id="maslo-zelene"><h2>Máslo zelené</h2></a>
 
-<p>Utři čtvrt libry čerstvě tlučeného másla se třemi na tvrdo uvařenými žloutky, dej k&nbsp;tomu lžíci špenátového tvarohu, dobře to promíchej, pak to dej do stříkánkové formy a&nbsp;protlač to skrze řídké sejtko – tak je to jako travinka.</p>
+<p>Utři čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> čerstvě tlučeného másla se třemi na tvrdo uvařenými žloutky, dej k&nbsp;tomu lžíci špenátového tvarohu, dobře to promíchej, pak to dej do stříkánkové formy a&nbsp;protlač to skrze řídké sejtko – tak je to jako travinka.</p>
 
 <a id="maslo-ruzove"><h2>Máslo růžové</h2></a>
 
@@ -18,15 +18,15 @@
 
 <a id="maslo-sardelove"><h2>Máslo sardelové</h2></a>
 
-<p>Omej sardelky v&nbsp;čisté studené vodě, mnoho-li jich potřebuješ, pak šupinky setři, odděl obě půlky od prostřední kůstky, načež sardelky na čistém prkénku nejdříve samotné, pak s&nbsp;čerstvým máslem rozetři. Kolik lotů je sardelek, tolik lotů musí býti másla, a&nbsp;rozetři to tak hladce, aby to bylo opět jako máslo; kousky sardelek nesmí v&nbsp;tom býti vidět. – Máslo sardelové potřebuje se k&nbsp;nesčíslným věcem, a&nbsp;když se na přípravu jeho práce nešetří, stane se ouhlednější i&nbsp;chutnější.</p>
+<p>Omej sardelky v&nbsp;čisté studené vodě, mnoho-li jich potřebuješ, pak šupinky setři, odděl obě půlky od prostřední kůstky, načež sardelky na čistém prkénku nejdříve samotné, pak s&nbsp;čerstvým máslem rozetři. Kolik <a href="miry-a-vahy.html#lot" class="mav">lotů</a> je sardelek, tolik <a href="miry-a-vahy.html#lot" class="mav">lotů</a> musí býti másla, a&nbsp;rozetři to tak hladce, aby to bylo opět jako máslo; kousky sardelek nesmí v&nbsp;tom býti vidět. – Máslo sardelové potřebuje se k&nbsp;nesčíslným věcem, a&nbsp;když se na přípravu jeho práce nešetří, stane se ouhlednější i&nbsp;chutnější.</p>
 
 <a id="maslo-cokoladove"><h2>Máslo čokoládové</h2></a>
 
-<p>Utři čtvrt libry čerstvě tlučeného másla se třemi na tvrdo vařenými žloutky, načež k&nbsp;tomu připoj dvě malé tabulky ustrouhané čokolády a&nbsp;dobře to utři; kdo chce, může k&nbsp;tomu přidati trochu cukru a&nbsp;trochu tlučené vanilie. – Toto máslo se požívá buď k&nbsp;čerstvě pečeným žemličkám nebo na oplatky namazané.</p>
+<p>Utři čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> čerstvě tlučeného másla se třemi na tvrdo vařenými žloutky, načež k&nbsp;tomu připoj dvě malé tabulky ustrouhané čokolády a&nbsp;dobře to utři; kdo chce, může k&nbsp;tomu přidati trochu cukru a&nbsp;trochu tlučené vanilie. – Toto máslo se požívá buď k&nbsp;čerstvě pečeným žemličkám nebo na oplatky namazané.</p>
 
 <p>Z másla žlutého, zeleného a&nbsp;černého mohou se dělati všelijaké věci, jako: košíčky, pyramidy atd. K&nbsp;okrašlování se zelené máslo dá do stříkánkové formy a&nbsp;protlačí se skrze řídké sejtko, uvnitř formy se nacházející, nebo se protlačí skrze cedník, anebo skrze stříkánkovou hvězdu <i>(Spritzfrapsenform)</i>. Zkušená kuchařka ostatně lehce pochopí, co se k&nbsp;čemu hodí, aby se to chutnější a&nbsp;ouhlednější stalo.</p>
 
 <a id="maslo-s-bylinkami"><h2>Máslo s&nbsp;bylinkami</h2></a>
 
-<p>Utře se čtvrt libry čerstvě tlučeného másla, osolí se a&nbsp;dá se k&nbsp;němu buď drobně rozkrájené routy, nebo kopru anebo pažitky <i>(Schnittling)</i>, dobře se promíchá a&nbsp;buď se jen bochánek z&nbsp;něho udělá, nebo se dá do porcelánové nebo skleněné nádobky a&nbsp;nechá se ve sklepě hodně ztuhnout; nebo se skrze stříkánkovou formu jako šnek na talíř protlačí a&nbsp;nechá se ve sklepě ztuhnout. Polovic toho másla a&nbsp;polovic tvarohu je tak nazvaná rozhuda (Toleranz) a&nbsp;v&nbsp;letě s&nbsp;chlebíčkem k&nbsp;pivu výborně chutná. Tato rozhuda nebo máslo může se rozličně okrášlit, ku př. na jaře věncem z&nbsp;bílých a&nbsp;červených řetkviček, nebo barevným máslem.</p>
+<p>Utře se čtvrt <a href="miry-a-vahy.html#libra" class="mav">libry</a> čerstvě tlučeného másla, osolí se a&nbsp;dá se k&nbsp;němu buď drobně rozkrájené routy, nebo kopru anebo pažitky <i>(Schnittling)</i>, dobře se promíchá a&nbsp;buď se jen bochánek z&nbsp;něho udělá, nebo se dá do porcelánové nebo skleněné nádobky a&nbsp;nechá se ve sklepě hodně ztuhnout; nebo se skrze stříkánkovou formu jako šnek na talíř protlačí a&nbsp;nechá se ve sklepě ztuhnout. Polovic toho másla a&nbsp;polovic tvarohu je tak nazvaná rozhuda (Toleranz) a&nbsp;v&nbsp;letě s&nbsp;chlebíčkem k&nbsp;pivu výborně chutná. Tato rozhuda nebo máslo může se rozličně okrášlit, ku př. na jaře věncem z&nbsp;bílých a&nbsp;červených řetkviček, nebo barevným máslem.</p>
 
